# hint

./: .PR.md  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
docs/superpowers/plans/: 2026-07-14-hint-streaming-render.md  2026-07-15-async-streaming-driver.md  2026-07-16-pr-a-api-consolidation.md  2026-07-16-pr-b-streaming-granularity.md
docs/superpowers/specs/: 2026-07-10-hint-extraction-design.md  2026-07-14-hint-streaming-render-design.md  2026-07-15-hint-async-streaming-driver-design.md  2026-07-16-render-contract-redesign-design.md
src/hint/: __init__.py  _async.py  _core.py  _helper.py  _markdown.py  async_test.py  element_test.py  import_test.py  markdown_test.py  render_test.py  stream_test.py  tag_test.py
